use java 8 replacements for String.isBlank and Predicate.negate